fixed bad title spacing in articles page

--- a/app/styles/layout/l-static-page.scss
+++ b/app/styles/layout/l-static-page.scss
@@ -50,10 +50,6 @@
 
   &.-articles-pubs {
 
-    :global .section-page {
-      padding: 0;
-    }
-
     :global .section-title {
       margin: 0 0 5px;
 
